; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mx1_camera.c_mclk_get_divisor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_mx1_camera.c_mclk_get_divisor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mx1_camera_dev = type { i32, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [53 x i8] c"System clock %lukHz, target freq %dkHz, divisor %lu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mx1_camera_dev*)* @mclk_get_divisor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mclk_get_divisor(%struct.mx1_camera_dev* %0) #0 {
  %2 = alloca %struct.mx1_camera_dev*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.mx1_camera_dev* %0, %struct.mx1_camera_dev** %2, align 8
  %6 = load %struct.mx1_camera_dev*, %struct.mx1_camera_dev** %2, align 8
  %7 = getelementptr inbounds %struct.mx1_camera_dev, %struct.mx1_camera_dev* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  store i32 %8, i32* %3, align 4
  %9 = load %struct.mx1_camera_dev*, %struct.mx1_camera_dev** %2, align 8
  %10 = getelementptr inbounds %struct.mx1_camera_dev, %struct.mx1_camera_dev* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 8
  %12 = call i64 @clk_get_rate(i32 %11)
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i32, i32* %3, align 4
  %15 = mul i32 2, %14
  %16 = zext i32 %15 to i64
  %17 = add i64 %13, %16
  %18 = sub i64 %17, 1
  %19 = load i32, i32* %3, align 4
  %20 = mul i32 2, %19
  %21 = zext i32 %20 to i64
  %22 = udiv i64 %18, %21
  %23 = sub i64 %22, 1
  store i64 %23, i64* %4, align 8
  %24 = load %struct.mx1_camera_dev*, %struct.mx1_camera_dev** %2, align 8
  %25 = getelementptr inbounds %struct.mx1_camera_dev, %struct.mx1_camera_dev* %24, i32 0, i32 1
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load i64, i64* %5, align 8
  %31 = udiv i64 %30, 1000
  %32 = load i32, i32* %3, align 4
  %33 = udiv i32 %32, 1000
  %34 = load i64, i64* %4, align 8
  %35 = call i32 @dev_dbg(i32 %29, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i64 %31, i32 %33, i64 %34)
  %36 = load i64, i64* %4, align 8
  %37 = trunc i64 %36 to i32
  ret i32 %37
}

declare dso_local i64 @clk_get_rate(i32) #1

declare dso_local i32 @dev_dbg(i32, i8*, i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
